--- a/src/main/resources/templates/CategoryViews/Category.html
+++ b/src/main/resources/templates/CategoryViews/Category.html
@@ -5,18 +5,25 @@
 
 </head>
 
-<body class="bg-dark">
+<body>
     <header th:replace="~{Layout/template :: header}"> 
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+            body {
+                font-family: 'Roboto Mono', monospace;
+            }
+            
+        </style>
 
     </header>
 
-    <div class="container text-center text-white">
+    <div class="container text-center bg-warning">
 
         <h1>Categorias</h1>
 
         <a class="btn btn-success btn-sm" th:href="@{/views/categories/add}" th:text="'Nueva Categoria'" title="'Add category'"></a>
 
-        <table class="table text-white">
+        <table class="table">
 
             <thead>
                 <tr>
@@ -30,7 +37,7 @@
                 <tr th:each="ct : ${categoryList} ">
                     <td th:text="${ct.id}"></td>
                     <td th:text="${ct.name}"></td>
-                    <td><a class="btn btn-outline-warning btn-sm" th:href="@{/views/categories/details/}+${ct.id}" th:text="'Editar'"
+                    <td><a class="btn btn-outline-success btn-sm" th:href="@{/views/categories/details/}+${ct.id}" th:text="'Editar'"
                             title="'Editar Registro'"></a>
                         <a class="btn btn-outline-danger btn-sm" th:href="@{/views/categories/delete/}+${ct.id}" th:text="'Eliminar'"
                             title="'Borrar Registro'" onclick="return confirm('Seguro de eliminar registro ?');"></a>
