--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace ="~{Layout/template :: head}">
-    
+<head th:replace="~{Layout/template :: head}">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+        body {
+            font-family: 'Roboto Mono', monospace;
+        }
+    </style>
 </head>
-<body class="bg-dark">
-    <header th:replace="~{Layout/template :: header}"> 
+
+<body class="bg-black" style="font-family: 'Roboto Mono', monospace; color: rgb(255, 174, 0);">
+    <header th:replace="~{Layout/template :: header}">
 
     </header>
 
-    <div class="container text-white text-center" style="margin-top: 40vh;">
-        <h3>Bienvenidos al Inicio</h3>
-        <p>Esta es mi primera pagina web con spring boot</p>
+    <div class="container" style="margin-top: 40vh;">
+        <h3>Bienvenidos a Stockify</h3>
+        <p>En esta aplicacion puedes registrar tus ventas y generar reportes</p>
     </div>
 
     <footer th:replace="~{Layout/template :: footer}">
-        
+
     </footer>
 
 </body>
+
 </html>
