--- a/src/main/resources/templates/ProductViews/ProductForm.html
+++ b/src/main/resources/templates/ProductViews/ProductForm.html
@@ -5,24 +5,27 @@
 
 </head>
 
-<body class="bg-dark">
+<body class="bg-black">
     <header th:replace="~{Layout/template :: header}"> 
 
     </header>
 
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="card bg-dark" style="max-width: 350px;">
-            <div class="card-header bg-black text-white" th:text="${title}" style="font-size: 16px;"></div>
+            <div class="card-header bg-black text-white" style="font-size: 16px;">
+                <a href="/views/products/" class="btn btn-sm btn-secondary float-right" style="font-size: 14px;">Regresar</a>
+                <span th:text="${title}"></span>
+            </div>
             <div class="card-body">
                 <form th:action="@{/views/products/save}" th:object="${Product}" method="post">
                     <div class="form-group">
                         <label for="name" class="text-white">Nombre:</label>
-                        <input type="text" th:field="*{name}" class="form-control form-control-sm bg-black text-white" id="name" placeholder="Name..." style="font-size: 14px;">
+                        <input type="text" th:field="*{name}" class="form-control form-control-sm bg-black text-white" id="name" placeholder="nombre..." style="font-size: 14px;">
                     </div>
                     <div class="form-group">
                         <label for="category" class="text-white">Categoria:</label>
                         <select th:field="*{category}" class="form-control form-control-sm bg-black text-white" id="category" style="font-size: 14px;">
-                            <option value="">Select a Category</option>
+                            <option value="">Selecciona una categoria</option>
                             <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
                         </select>
                     </div>
@@ -33,7 +36,7 @@
                     <div class="form-group">
                         <label for="provider" class="text-white">Proveedor:</label>
                         <select th:field="*{provider}" class="form-control form-control-sm bg-black text-white" id="provider" style="font-size: 14px;">
-                            <option value="">Select a Provider</option>
+                            <option value="">Seleccion a un proveedor</option>
                             <option th:each="provider : ${providers}" th:value="${provider.id}" th:text="${provider.name}"></option>
                         </select>
                     </div>
@@ -42,11 +45,11 @@
                         <input type="number" th:field="*{cost}" class="form-control form-control-sm bg-black text-white" id="cost" placeholder="0.00" style="font-size: 14px;">
                     </div>
                     <div class="form-group">
-                        <label for="stock" class="text-white">Stock:</label>
+                        <label for="stock" class="text-white">Existencia:</label>
                         <input type="number" th:field="*{stock}" class="form-control form-control-sm bg-black text-white" id="stock" placeholder="0" style="font-size: 14px;">
                     </div>
                     <div class="form-group mt-3">
-                        <input type="submit" class="btn btn-success btn-sm" value="Guardar" style="font-size: 14px;">
+                        <input type="submit" class="btn btn-warning btn-sm" value="Guardar" style="font-size: 14px;">
                     </div>
                 </form>
             </div>
